# Multi-Agent-Workflow-Orchestrator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: launch.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/cadenza_api/: __init__.py  bus.py  byok.py  config.py  limits.py  main.py  redact.py  runs.py  schemas.py  store.py
apps/api/tests/: _helpers.py  conftest.py  test_api.py  test_bus.py  test_hitl.py  test_limits.py  test_persistence.py  test_real_path.py  test_store.py
apps/web/: Dockerfile  next.config.ts  package.json  playwright.config.ts  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/run/[id]/: page.tsx
apps/web/components/: Analytics.tsx  BookCTA.tsx  CadenzaMark.tsx  MiniFlow.tsx  Nav.tsx
apps/web/components/console/: AgentGraph.tsx  Console.tsx  SavedRun.tsx
apps/web/e2e/: happy-path.spec.ts
apps/web/lib/: analytics.ts
apps/web/lib/console/: controller.ts  reducer.ts
apps/web/test/: analytics.test.ts  reducer.test.ts
infra/: Caddyfile  docker-compose.yml
